objects/Counsellor_Availability__c.object
<CustomObject><fields>
        <fullName>Active_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Term</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AppointmentType__c</fullName>
        <description>Formula field for Appointment type from Availability Definition Object</description>
        <formula>TEXT(Availability__r.AppointmentType__c)</formula>
        <inlineHelpText>Appointment type of Availability Definition</inlineHelpText>
        <label>Appointment Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Availability__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to store the reference to Availability</description>
        <label>Availability</label>
        <referenceTo>Counselor_Availability_Definition__c</referenceTo>
        <relationshipLabel>Slots (Availability)</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CAConflictProcessFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAConflictProcessFlag</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CASA_Appointment__c</fullName>
        <formula>CONTAINS(Availability__r.Success_Center__r.Name, "CASA" )</formula>
        <label>CASA Appointment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CapacityReached__c</fullName>
        <formula>IF(Noofstudentsregistered__c ==  Capacity__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Reached</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Center_Text__c</fullName>
        <label>Center Text</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Center__c</fullName>
        <formula>Availability__r.Success_Center__r.Name</formula>
        <label>Center</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CheckInTime__c</fullName>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>CheckOutTime__c</fullName>
        <label>Check Out Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked In</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Coach_Email__c</fullName>
        <description>Field to capture Coach email address</description>
        <label>Coach Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Coach_First_Name__c</fullName>
        <formula>Availability__r.Coach__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coach First Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Coach_Full_Name__c</fullName>
        <description>FirstName LastName</description>
        <formula>Coach_First_Name__c &amp; " " &amp;  Coach_Last_Name__c</formula>
        <label>Coach Full Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Coach_Last_Name__c</fullName>
        <formula>Availability__r.Coach__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coach Last Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Consultant__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>DropinTotalUsedTime__c</fullName>
        <label>Drop in Total Used Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Event_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Conflict</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Has_Possible_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the user has another calendar event that overlaps this one.</description>
        <inlineHelpText>If this field is checked please review your calendar for conflicting events. Do not clear the box unless you are certain you have resolved any conflicts.</inlineHelpText>
        <label>Has Possible Conflict</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Counsellor_Availability</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>No_of_missed_by_student_appointments__c</fullName>
        <description>No of missed by student appointments</description>
        <label>No of missed by student appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Noofstudentsregistered__c</fullName>
        <description>No of students registered</description>
        <label>No of Students Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <description>Notes provided by the consultant</description>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Number_Of_Seats_Booked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Seats Booked (Obsolete)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Peer_Center_Appointment__c</fullName>
        <formula>CONTAINS(Availability__r.Success_Center__r.Name, "Peer Center")</formula>
        <label>Peer Center Appointment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Selected_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Course</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Selected_Meeting_Location__c</fullName>
        <label>Selected Meeting Location</label>
        <picklist>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>SlotDuration__c</fullName>
        <formula>(End_Time__c -  Start_Time__c) * 24*60</formula>
        <label>Slot Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Slot_Date__c</fullName>
        <description>Workflow to support Report functionality: Missed Appointments for LWC</description>
        <label>Slot Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>StartDate__c</fullName>
        <formula>DATEVALUE( Start_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Start_Time24__c</fullName>
        <formula>MID (TEXT (  Start_Time__c  - (7/24) ), 12, 5)</formula>
        <inlineHelpText>24-Hour time</inlineHelpText>
        <label>Start Time24</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>System field for strike and report functionality</description>
        <label>Term</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>hed__Term__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Time_Trigger_15__c</fullName>
        <description>This field will be used for Missed Appointment By Consultant Workflow Rule. Should not be displayed on pagelayouts</description>
        <formula>Start_Time__c - 0.03109</formula>
        <label>Time Trigger 15</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Total_No_of_appointments__c</fullName>
        <label>Total No of appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>175</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed by Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Checked-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Slot</label><nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Coach Availability Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Slots</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Coach_First_Name__c</columns>
        <columns>Coach_Last_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Center__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Available_Slots</fullName>
        <columns>NAME</columns>
        <columns>Coach_First_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Available Slots</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>LWC_Learning_Slots</fullName>
        <columns>NAME</columns>
        <columns>Coach_First_Name__c</columns>
        <columns>Coach_Last_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Center__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Counsellor_Availability__c.LWC_Slot</value>
        </filters>
        <filters>
            <field>Center__c</field>
            <operation>contains</operation>
            <value>Learning</value>
        </filters>
        <label>LWC Learning Slots</label>
    </listViews><listViews>
        <fullName>LWC_Slots</fullName>
        <columns>NAME</columns>
        <columns>Coach_First_Name__c</columns>
        <columns>Coach_Last_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Interviewer__c</columns>
        <columns>Center__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Counsellor_Availability__c.LWC_Slot</value>
        </filters>
        <label>LWC Slots</label>
    </listViews><listViews>
        <fullName>My_Availability</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Interviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Availability</label>
    </listViews><recordTypes>
        <fullName>CASA_Slot</fullName>
        <active>true</active>
        <label>CASA Slot</label>
    </recordTypes><recordTypes>
        <fullName>LWC_Slot</fullName>
        <active>true</active>
        <label>LWC Slot</label>
    </recordTypes><validationRules>
        <fullName>EndDate_not_less_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time__c  &lt;  Start_Time__c</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>End date Should not be less than Start date</errorMessage>
    </validationRules><validationRules>
        <fullName>Start_Date_not_less_than_Current_Time</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Time__c &lt;  NOW()</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>Start date Should not be less than Current Date and Time</errorMessage>
    </validationRules></CustomObject>